Introduce pause notifications for user #49
