# core/model/user.go
@@ -21,12 +21,13 @@ import "time"
 
 // User represents user entity and all its relationship with firebase tokens and topics
 type User struct {
-	ID             string          `json:"id" bson:"_id"`
-	FirebaseTokens []FirebaseToken `json:"firebase_tokens" bson:"firebase_tokens"`
-	UserID         *string         `json:"user_id" bson:"user_id"`
-	Topics         []string        `json:"topics" bson:"topics"`
-	DateCreated    time.Time       `json:"date_created" bson:"date_created"`
-	DateUpdated    time.Time       `json:"date_updated" bson:"date_updated"`
+	ID                    string          `json:"id" bson:"_id"`
+	NotificationsDisabled bool            `json:"notifications_disabled" bson:"notifications_disabled"`
+	FirebaseTokens        []FirebaseToken `json:"firebase_tokens" bson:"firebase_tokens"`
+	UserID                *string         `json:"user_id" bson:"user_id"`
+	Topics                []string        `json:"topics" bson:"topics"`
+	DateCreated           time.Time       `json:"date_created" bson:"date_created"`
+	DateUpdated           time.Time       `json:"date_updated" bson:"date_updated"`
 } //@name User
 
 // AddToken adds topic to the list
