# docs/swagger.yaml
@@ -24,6 +24,8 @@ definitions:
     properties:
       name:
         type: string
+      notification_disabled:
+        type: boolean
       user_id:
         type: string
     type: object
@@ -65,6 +67,8 @@ definitions:
         type: array
       id:
         type: string
+      notifications_disabled:
+        type: boolean
       topics:
         items:
           type: string
@@ -129,6 +133,11 @@ definitions:
     properties:
       token:
         type: string
+    type: object
+  updateUserRequest:
+    properties:
+      notifications_disabled:
+        type: boolean
     type: object
 host: localhost
 info:
@@ -606,6 +615,27 @@ paths:
     get:
       description: Gets user record
       operationId: User
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/User'
+            type: array
+      security:
+      - RokwireAuth UserAuth: []
+      tags:
+      - Client
+    post:
+      description: Updates user record
+      operationId: User
+      parameters:
+      - description: body json
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/updateUserRequest'
       responses:
         "200":
           description: OK
